[gd_scene load_steps=43 format=3 uid="uid://bke8ohgi88a3k"]

[ext_resource type="Script" uid="uid://dbuhl7tojgto2" path="res://script/hostile/enemy_base.gd" id="1_0dq4w"]
[ext_resource type="Script" uid="uid://cnxvknb5bqxce" path="res://script/components/stats.gd" id="2_54ojy"]
[ext_resource type="Script" uid="uid://dsj462rg05pel" path="res://script/components/hit_box.gd" id="3_7ijlw"]
[ext_resource type="Shader" uid="uid://b1nwb5p0bjv5i" path="res://shader/blink.gdshader" id="4_35ih3"]
[ext_resource type="Script" uid="uid://dtffxjfmsjwuw" path="res://script/components/hurt_box.gd" id="4_vhfx3"]
[ext_resource type="Texture2D" uid="uid://cp511vlvuylir" path="res://assets/temp/White-Circle-PNG.png" id="5_roat0"]
[ext_resource type="Texture2D" uid="uid://we6s5pjrox5v" path="res://assets/particle/dissolve.tres" id="5_veo01"]
[ext_resource type="Texture2D" uid="uid://b6b3hu5g6wb3w" path="res://assets/player/skill/burst_out.png" id="8_qxinp"]
[ext_resource type="Texture2D" uid="uid://ckbg71qnjmn2b" path="res://assets/player/skill/possess.png" id="9_rxnjr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_54ojy"]
resource_local_to_scene = true
size = Vector2(8, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_roat0"]
radius = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_veo01"]
resource_local_to_scene = true
shader = ExtResource("4_35ih3")
shader_parameter/blink_color = Color(1, 1, 1, 1)
shader_parameter/blink_intensity = 0.0
shader_parameter/percentage = 1.0
shader_parameter/burn_texture = ExtResource("5_veo01")
shader_parameter/layer_1 = Color(0.2, 0.2, 0.2, 1)
shader_parameter/size_1 = 0.05
shader_parameter/layer_2 = Color(1, 0, 0, 1)
shader_parameter/size_2 = 0.05
shader_parameter/layer_3 = Color(1, 0.5, 0, 1)
shader_parameter/size_3 = 0.05

[sub_resource type="SpriteFrames" id="SpriteFrames_roat0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_roat0"]
resource_local_to_scene = true
size = Vector2(24.041632, 24.041632)

[sub_resource type="Animation" id="Animation_hfhxk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox/Circle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/Circle/CircleTimer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.039129253, 0.039129253)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox/Circle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rkmeh"]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox/Circle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_732fb"]
resource_name = "shrink_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox/Circle/CircleTimer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.024, 0.024), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/Circle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox/Circle:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pisg7"]
_data = {
&"RESET": SubResource("Animation_hfhxk"),
&"fade_out": SubResource("Animation_rkmeh"),
&"shrink_in": SubResource("Animation_732fb")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhfx3"]
bg_color = Color(0.98749274, 0, 0.25822866, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxinp"]
atlas = ExtResource("8_qxinp")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd626"]
atlas = ExtResource("8_qxinp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wb16"]
atlas = ExtResource("8_qxinp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4xhu"]
atlas = ExtResource("8_qxinp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvbe8"]
atlas = ExtResource("8_qxinp")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0y0i"]
atlas = ExtResource("8_qxinp")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_expk7"]
atlas = ExtResource("8_qxinp")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2km4"]
atlas = ExtResource("8_qxinp")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuf4h"]
atlas = ExtResource("8_qxinp")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eol3d"]
atlas = ExtResource("8_qxinp")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxdv1"]
atlas = ExtResource("9_rxnjr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3elpu"]
atlas = ExtResource("9_rxnjr")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqydq"]
atlas = ExtResource("9_rxnjr")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kenlu"]
atlas = ExtResource("9_rxnjr")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlu34"]
atlas = ExtResource("9_rxnjr")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6h7m"]
atlas = ExtResource("9_rxnjr")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6myh"]
atlas = ExtResource("9_rxnjr")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkv7q"]
atlas = ExtResource("9_rxnjr")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3gcx"]
atlas = ExtResource("9_rxnjr")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d0oa"]
atlas = ExtResource("9_rxnjr")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa03x"]
atlas = ExtResource("9_rxnjr")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb0b1"]
atlas = ExtResource("9_rxnjr")
region = Rect2(704, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_sf8nd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxinp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd626")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wb16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4xhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvbe8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0y0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_expk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2km4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuf4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eol3d")
}],
"loop": false,
"name": &"out",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxdv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3elpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqydq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kenlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlu34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6h7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6myh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkv7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3gcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d0oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa03x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb0b1")
}],
"loop": false,
"name": &"posses",
"speed": 22.0
}]

[node name="EnemyBase" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 4
script = ExtResource("1_0dq4w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_54ojy")

[node name="Stats" type="Node2D" parent="." node_paths=PackedStringArray("health_bar")]
script = ExtResource("2_54ojy")
health_bar = NodePath("../HealthBar")
metadata/_custom_type_script = "uid://cnxvknb5bqxce"

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_7ijlw")
metadata/_custom_type_script = "uid://dsj462rg05pel"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_roat0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
material = SubResource("ShaderMaterial_veo01")
sprite_frames = SubResource("SpriteFrames_roat0")

[node name="AttackTimer" type="Timer" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("4_vhfx3")
metadata/_custom_type_script = "uid://dtffxjfmsjwuw"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
scale = Vector2(0.9999999, 0.9999999)
shape = SubResource("RectangleShape2D_roat0")

[node name="Circle" type="Node2D" parent="Hurtbox"]
visible = false
z_index = 3
scale = Vector2(0.9999999, 0.9999999)

[node name="CircleAnimation" type="AnimationPlayer" parent="Hurtbox/Circle"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_pisg7")
}

[node name="CircleTimer" type="Sprite2D" parent="Hurtbox/Circle"]
position = Vector2(4.768372e-07, -9.536744e-07)
rotation = -3.1415925
scale = Vector2(0.039129253, 0.039129253)
texture = ExtResource("5_roat0")

[node name="Reference" type="Sprite2D" parent="Hurtbox/Circle"]
position = Vector2(4.768372e-07, -9.536744e-07)
rotation = -3.1415925
scale = Vector2(0.0071148607, 0.0071148607)
texture = ExtResource("5_roat0")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -9.0
offset_top = -26.0
offset_right = 9.0
offset_bottom = -22.0
theme_override_styles/fill = SubResource("StyleBoxFlat_vhfx3")
show_percentage = false

[node name="NavAgent" type="NavigationAgent2D" parent="."]
simplify_path = true
avoidance_enabled = true

[node name="DamageNumberOrigin" type="Node2D" parent="."]
position = Vector2(0, -27)

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="PossesEffect" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_sf8nd")
autoplay = "default"

[connection signal="current_animation_changed" from="Hurtbox/Circle/CircleAnimation" to="Hurtbox" method="_on_circle_animation_current_animation_changed"]
